# FaceAuthClient

./: CMakeLists.txt  CMakeUserPresets.json  FaceAuthClient.cpp  FaceAuthClient.h  FaceAuthClient.ui  LICENSE.txt  README.md  ServerSettingsDialog.cpp  ServerSettingsDialog.h  main.cpp
